# sandrose

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
sandrose/: __init__.py  bins.py  conversions.py  dp.py  plot.py
sandrose/common/: constants.py  structures.py
sandrose/dp/: calc.py  dp_sum.py
tests/: test_sandrose.py
